# gld

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  glad.c
android/gld/: .gitignore  gradle.properties
android/gld/app/: build.gradle
android/gld/app/src/main/cpp/: CMakeLists.txt  NativeActivity.cpp
android/gld/app/src/main/cpp/cmake/: FindFT2PP.cmake  FindGLM.cmake  FindMINI_TEST.cmake
android/gld/app/src/main/cpp/include/: EGLCxt.h  GlfwDef.h  MapEvent.h  sundry.h
aoe2/: README.md
aoe2/include/aoe2/: Aoe2Assets.hpp  Aoe2Components.hpp  Aoe2Plugin.hpp  Aoe2ResourceManager.hpp  Aoe2Systems.hpp
aoe2/src/: Aoe2Assets.cpp  Aoe2Batch.cpp  Aoe2Plugin.cpp  Aoe2ResourceManager.cpp  Aoe2Systems.cpp
aoe2/tests/: Aoe2RuntimeTests.cpp
cmake/: CreateExample.cmake  FindASSIMP.cmake  FindBASS24.cmake  FindFREE_TYPE.cmake  FindFT2PP.cmake  FindGLFW3.cmake  FindGLM.cmake  FindSOIL.cmake  FindSPY.cmake  Findfreetype.cmake
d1/: comm.h  main.cpp  view1.hpp  view2.hpp
example/Blinn/: main.cpp
example/aoe2_unit_benchmark/: main.cpp
example/aoe2_unit_preview/: main.cpp
example/aoe2de_spearman/: main.cpp
example/clock/: main.cpp
example/clock2/: main.cpp
example/ecs_audio_fft/: main.cpp
example/ecs_demo/: main.cpp
example/ecs_lighting/: main.cpp
example/ecs_multicam/: main.cpp
example/ecs_postprocess/: main.cpp
example/ecs_text/: main.cpp
example/ecs_text_fx/: main.cpp
example/framebuffer/: main.cpp
example/geometry/: main.cpp
example/heart/: main.cpp
example/instantiation/: main.cpp
example/line/: main.cpp
example/music_player/: GetFileName.cpp  GetFileName.h  MMFile.cpp  MMFile.h  MusicPlayer.cpp  MusicPlayer.h  Pumper.cpp  Pumper.h  SupportFile.cpp  SupportFile.h  bloom.h  cover_art.h  fft_view.h  main.cpp  motion_trail.h  view1.h  view2.h  view3.h  view4.h  view5.h
example/music_player/lrc/: comm.h  lrc_analyse.cpp  lrc_analyse.h  lrc_loader.cpp  lrc_loader.h  lrc_mgr.hpp  lrc_view.cpp  (+1 more)
example/photo_viewer/: main.cpp
example/reflect/: main.cpp
example/refract/: main.cpp
example/shadow/: main.cpp
example/shadow2/: main.cpp
example/skybox/: main.cpp
example/test_curved/: main.cpp
example/test_sphere/: main.cpp
example/text3d/: main.cpp
example/word/: main.cpp
glad/: glad.h
include/: FindPath.hpp  RenderDemo.h  RenderDemoRotate.hpp  assimp_iosystem.h  buffer.hpp  component.h  cube_texture.hpp  data_comm.hpp  data_mgr.hpp  drawable.h  frame_buffer.hpp  frame_rate.h  gl_comm.hpp  glm_uniform.hpp  glsl_preprocess.hpp  log.hpp  macro.hpp  make_color.hpp  node.hpp  program.hpp  res_cache_mgr.hpp  res_comm.hpp  resource_mgr.hpp  sprite.h  sundry.hpp  texture.hpp  uniform.hpp  uniform_buf.hpp  vertex_arr.hpp
include/comps/: Material.hpp  sundry.h
include/ecs/: App.hpp  BaseSystem.hpp  Components.hpp  EcsWorld.hpp  Events.hpp  Input.hpp  PerformanceMonitoring.hpp  Window.hpp
include/event/: Event.h  EventDispatcher.h  EventHandler.h
include/generator/: Generator.hpp
include/node/: clip_node.h  node_with_event.h
include/text/: Page.hpp  TexGenerate.hpp  TextMgr.hpp  TextNodeGen.hpp  TextRender.hpp  contents.hpp
include/tools/: app.h  convert.h  executor.h  tween.hpp
include/tree/: TreeManager.hpp
include/ui/: clip.h  label.h  sphere.h  wheel.h  wheel_ex.h  word.h  word_patch.h
lighting/: light.hpp  lighting_1.cpp  model.hpp
lighting_2/: light.hpp  main.cpp  model.hpp
lighting_3/: light.hpp  main.cpp  model.hpp
lighting_4/: light.hpp  main.cpp  model.hpp
lighting_5/: light.hpp  main.cpp  model.hpp
lighting_6/: light.hpp  main.cpp  model.hpp
load_model/: main.cpp
res/base/: bar_fg.glsl  bar_vs.glsl  base2_fg.glsl  base2_vs.glsl  base_fg.glsl  base_vs.glsl  curve_fg.glsl  curve_vs.glsl  empty_fg.glsl  empty_vs.glsl  glow_fg.glsl  line2_fg.glsl  line2_ge.glsl  line3_fg.glsl  line3_ge.glsl  line3_vs.glsl  line_fg.glsl  line_fg_old.glsl  line_ge.glsl  line_vs.glsl  psize_vs.glsl  skybox_fg.glsl  skybox_vs.glsl  word_fg.glsl  word_vs.glsl  word_vs_2.glsl
res/blinn/: base_fg.glsl  base_vs.glsl
res/bloom/: blur_fg.glsl  bright_fg.glsl  composite_fg.glsl
res/ecs/: aoe2_sprite_fg.glsl  aoe2_unit_fg.glsl  aoe2_unit_playercolor_fg.glsl  aoe2_unit_shadow_fg.glsl  aoe2_unit_teamcolor_fg.glsl  aoe2_unit_teamcolor_mask_fg.glsl  aoe2_unit_vs.glsl  mesh_emissive_fg.glsl  mesh_fg.glsl  mesh_unlit_fg.glsl  mesh_vs.glsl  post_fog_fg.glsl  post_fullscreen_vs.glsl  spectrum_bar_fg.glsl  text_fg.glsl  text_outline_fg.glsl  text_sdf_fg.glsl  text_vs.glsl
res/framebuffer/: frag.glsl
res/geometry/: base_fg.glsl  base_vs.glsl  explode.glsl
res/instantiation/: base_fg.glsl  base_vs.glsl  empty_vs.glsl  word_fg.glsl  word_vs.glsl
res/lighting_2/: base_fg.glsl  base_vs.glsl
res/lighting_3/: base_fg.glsl
res/lighting_4/: base_fg.glsl  base_fg_better.glsl  base_vs.glsl  light.glsl
res/lighting_5/: base_fg.glsl  base_vs.glsl
res/lighting_6/: base_fg.glsl  base_vs.glsl  comm.glsl
res/model/: heart_smooth.max
res/point/: base_fg.glsl  base_vs.glsl
res/reflect/: reflect_fg.glsl  refract_fg.glsl
res/shadow/: base_fg.glsl  base_vs.glsl
res/shadow_map/: base_fg.glsl  base_vs.glsl
res/trail/: accum_fg.glsl  present_fg.glsl
scripts/: android_assimp.bat
src/: EcsAssetLoaders.cpp  EcsAudioCapture.cpp  EcsBatch.cpp  EcsFft.cpp  EcsFontLoader.cpp  EcsFullscreenPass.cpp  EcsLighting.cpp  EcsMeshFactory.cpp  EcsMeshPass.cpp  EcsPcmNormalize.cpp  EcsPostProcess.cpp  EcsRender.cpp  EcsRenderTarget.cpp  EcsTextBatch.cpp  EcsTextSystems.cpp  EcsWindow.cpp  Generator.cpp  RenderDemo.cpp  TextNodeGen.cpp  TreeManager.cpp  app.cpp  component.cpp  convert.cpp  data_mgr.cpp  data_mgr_cube_tex.cpp  data_mgr_gen.cpp  def_comp_impl.cpp  font_data_load_impl.cpp  frame_rate.cpp  glsl_preprocess.cpp  log.cpp  resource_mgr.cpp  word_patch.cpp
stencilt_test/: main.cpp
tools/aoe2de_export/: .gitignore  CMakeLists.txt  README.md  aoe2de_export.py
tools/aoe2de_export/sld/: sld.cp313-win_amd64.ilk  sld.cp313-win_amd64.pyd  sld.pyx  texture.py
tools/aoe2de_export/tests/: test_aoe2de_export.py
(+78 files in other folders)
